section14-15/complex/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    # How to find the objects to be update when this file changes.
    matchLabels:
      component: server
  # Pods configuration.
  template:
    metadata:
      labels:
        # Keys and values are totally custom here.
        # Using `component` as key is just a convention.
        # It should indeed match with what's in spec > selector > matchLabels
        component: server
    spec:
      containers:
        - name: server
          image: nimiq/multi-server
          ports:
            - containerPort: 5000
